Generics_Extend_WildCard/Code2_error_report.txt
javac errors for Code2.java 
Code2.java:23: error: no suitable method found for add(Box<Integer>)
        boxes.add(new Box<>(3));
             ^
    method Collection.add(CAP#1) is not applicable
      (argument mismatch; cannot infer type arguments for Box<>
          reason: no instance(s) of type variable(s) T exist so that Box<T> conforms to CAP#1)
    method List.add(CAP#1) is not applicable
      (argument mismatch; cannot infer type arguments for Box<>
          reason: no instance(s) of type variable(s) T exist so that Box<T> conforms to CAP#1)
  where T is a type-variable:
    T extends Number declared in class Box
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Box<? extends Number> from capture of ? extends Box<? extends Number>
Code2.java:29: error: cannot infer type arguments for Box<>
        boxes.add(new Box<>("string"));
                  ^
  reason: inferred type does not conform to upper bound(s)
    inferred: String
    upper bound(s): Number
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors
 
============================================================================= 
ExtendJ errors for Code2.java 
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Extend_WildCard\Code2.java:23: error: no method named add(Box<java.lang.Integer>) in java.util.List<? extends Box> matches. However, there is a method add(wildcards.? extends Box)
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Extend_WildCard\Code2.java:27: error: argument 'new Box<>(5)' of type Box<java.lang.Integer> is not compatible with the method parameter type ? super Box
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Extend_WildCard\Code2.java:28: error: argument 'new Box<>(10.5)' of type Box<java.lang.Double> is not compatible with the method parameter type ? super Box
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Extend_WildCard\Code2.java:29: error: cannot instantiate Box no matching constructor found in Box
 
============================================================================= 
Eclipse ECJ errors for Code2.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Extend_WildCard\Code2.java (at line 23)
	boxes.add(new Box<>(3));
	      ^^^
The method add(capture#4-of ? extends Box<? extends Number>) in the type List<capture#4-of ? extends Box<? extends Number>> is not applicable for the arguments (new Box<>(3))
----------
2. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Extend_WildCard\Code2.java (at line 23)
	boxes.add(new Box<>(3));
	          ^^^^^^^^^^^^
Cannot infer type arguments for Box<>
----------
3. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Extend_WildCard\Code2.java (at line 29)
	boxes.add(new Box<>("string"));
	          ^^^^^^^^^^^^^^^^^^^
Cannot infer type arguments for Box<>
----------
3 problems (3 errors)
